revert(editor/cdn): 移除占位 SRI，使用官方稳定路径引用以避免不可访问问题

--- a/src/public/editor.html
+++ b/src/public/editor.html
@@ -52,10 +52,10 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js" integrity="sha384-wlLwCzS2Y6mZQvQeJ6nVwzU0gkYpLQwzvYHk8nYk6m0CYXQWwJvZPpH2VvZ2r1QK" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js" integrity="sha384-3s8K8Zr9jVQqQ1cGg6p4N6lB2KjFZQfZ7sW0k5t8y2l7U3jQpJZVxQG8r2t1s9QX" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js" integrity="sha384-ZJ0c2h6fEJ6VpwA1p8vY9vZtQ8Tg7tO4aNfXWQH0sFz+u6JqTzWlDqfVbKkYj8fJw" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js" integrity="sha384-9lWqZcG1mQ2HhHkP2jH+uWwQvYkZbQJk9QzHjK2lU2y9fVwP1lZQj6mT0sFv2YwJk" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
     <script src="js/renderer.js"></script>
     <script src="js/editor.js"></script>
 </body>
