feat(editor): 快捷键与工具栏加粗/斜体/标题1-6；修复空文件读取返回404的问题

--- a/src/public/editor.html
+++ b/src/public/editor.html
@@ -34,6 +34,16 @@
                     <button id="btn-back" class="edit-btn" title="返回预览">⟵ 返回</button>
                     <button id="btn-save" class="edit-btn" title="保存 (Cmd/Ctrl+S)">💾 保存</button>
                     <button id="btn-save-as" class="edit-btn" title="另存为">📝 另存为</button>
+                    <button id="btn-bold" class="edit-btn" title="加粗 (Cmd/Ctrl+B)">B</button>
+                    <button id="btn-italic" class="edit-btn" title="斜体 (Cmd/Ctrl+I)"><i>I</i></button>
+                    <div class="edit-btn-group">
+                        <button id="btn-h1" class="edit-btn" title="标题1 (Cmd/Ctrl+1)">H1</button>
+                        <button id="btn-h2" class="edit-btn" title="H2 (Cmd/Ctrl+2)">H2</button>
+                        <button id="btn-h3" class="edit-btn" title="H3 (Cmd/Ctrl+3)">H3</button>
+                        <button id="btn-h4" class="edit-btn" title="H4 (Cmd/Ctrl+4)">H4</button>
+                        <button id="btn-h5" class="edit-btn" title="H5 (Cmd/Ctrl+5)">H5</button>
+                        <button id="btn-h6" class="edit-btn" title="H6 (Cmd/Ctrl+6)">H6</button>
+                    </div>
                     <button id="btn-toggle-preview" class="edit-btn" title="切换预览">🔁 预览开关</button>
                 </div>
             </div>
