feat(editor/override): 并发冲突弹窗与覆盖保存流程；服务端支持 override=true 跳过并发校验

--- a/src/public/editor.html
+++ b/src/public/editor.html
@@ -69,6 +69,18 @@
                             </div>
                         </div>
                     </div>
+                    <div id="override-modal" class="modal-backdrop">
+                        <div class="modal">
+                            <div class="modal-header">并发冲突</div>
+                            <div class="modal-body">
+                                <p>检测到文件已被其他会话修改。是否覆盖保存？</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="override-cancel" class="edit-btn">取消</button>
+                                <button id="override-confirm" class="edit-btn">覆盖保存</button>
+                            </div>
+                        </div>
+                    </div>
                     <button id="btn-bold" class="edit-btn" title="加粗 (Cmd/Ctrl+B)">B</button>
                     <button id="btn-italic" class="edit-btn" title="斜体 (Cmd/Ctrl+I)"><i>I</i></button>
                     <div class="edit-btn-group">
